--- a/web/app/testing/templates/index.html
+++ b/web/app/testing/templates/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Testing</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'testing/main.css' %}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="{% static 'testing/main.js' %}"></script>
@@ -14,7 +15,7 @@
 <body>
     <div class="container">
         <div id="accordion">
-            {% for grop in config_list %}
+            {% for grop in aj_list %}
                 <div class="card">
                     <div class="card-header" id="heading-{{ forloop.counter }}">
                         <h5 class="mb-0">
@@ -27,7 +28,7 @@
                     <div id="collapse-{{ forloop.counter }}" class="collapse {% if forloop.counter == 1 %}show{% endif %}" aria-labelledby="heading-{{ forloop.counter }}" data-parent="#accordion">
                         <div class="card-body">
                             {%  for config in grop.items %}
-                                <button type="button" class="btn btn-secondary btn-testing" data-group="{{ grop.name }}" data-name="{{ config.name }}">{{ config.name }}</button>
+                                <button type="button" class="btn btn-testing" data-group="{{ grop.name }}" data-name="{{ config.name }}">{{ config.name }}</button>
                             {% endfor %}
                         </div>
                     </div>
