--- a/web/app/static/testing/main.css
+++ b/web/app/static/testing/main.css
@@ -1,3 +1,7 @@
+#accordion .card .card-body .btn {
+    margin: 0 10px 20px 0;
+}
+
 #accordion .card:nth-child(4n+1) .card-body .btn {
     background-color: #d1ecf1;
     border-color: #bee5eb;
