--- a/web/app/testing/templates/home.html
+++ b/web/app/testing/templates/home.html
@@ -22,7 +22,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    {% for c in config_map %}
+                    {% for c in menus %}
                     <li class="nav-item active">
                         <a class="nav-link" href="/{{ c }}">{{ c }}</a>
                     </li>
