--- a/web/app/static/testing/main.css
+++ b/web/app/static/testing/main.css
@@ -1,5 +1,6 @@
 #accordion .card .card-body .btn {
     margin: 0 10px 20px 0;
+    width: 200px;
 }
 
 #accordion .card:nth-child(4n+1) .card-body .btn {
