--- a/web/app/ui/templates/index.html
+++ b/web/app/ui/templates/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="/">Projects</a>
+                    <a class="navbar-brand" href="/v/">Projects</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -25,7 +25,7 @@
                         <ul class="navbar-nav">
                             {% for c in menus %}
                             <li class="nav-item active">
-                                <a class="nav-link" href="/{{ c }}">{{ c }}</a>
+                                <a class="nav-link" href="/v/{{ c }}">{{ c }}</a>
                             </li>
                             {% endfor %}
                         </ul>
